--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,104 +1,30 @@
 /* app css stylesheet */
-#container 
-{
-    margin: 0px auto;
+
+.menu {
+  list-style: none;
+  border-bottom: 0.1em solid black;
+  margin-bottom: 2em;
+  padding: 0 0 0.5em;
 }
 
-.row 
-{
-    margin-left: 0px;
+.menu:before {
+  content: "[";
 }
 
-header .row, footer .row 
-{
-    margin-left: 8px;
+.menu:after {
+  content: "]";
 }
 
-header .row 
-{
-    background-color: darkcyan;
-    height: 110px; 
+.menu > li {
+  display: inline;
 }
 
-header .row  h2 
-{
-    text-align: center;
+.menu > li:before {
+  content: "|";
+  padding-right: 0.3em;
 }
 
- [class*="span"] {
-    margin-left: 8px;
-  }
-
-.row 
-{
-    margin-bottom: 8px;
-}
-
-#guidelines 
-{
-    background-color: aqua;
-    height: 160px; 
-}
-
-#countryInformation 
-{
-    background-color: chocolate;
-    height: 160px; 
-}
-
-#carousel 
-{
-    background-color: bisque;
-    height: 328px; 
-}
-
-#caseStudies 
-{
-    background-color: brown;
-    height: 160px; 
-}
-
-#globalSupportProgramme 
-{
-    background-color: blue;
-    height: 160px; 
-}
-
-#mainFooter.row 
-{
-    margin-top: -8px;
-}
-
-#mainFooter div
-{
-    background-color: darkgreen;
-    height: 220px; 
-}
-
-footer .row
-{
-    background-color: firebrick;
-    height: 40px; 
-}
-
-@media (min-width: 1200px) 
-{
-
-    #container 
-    {
-        margin-left: 40px;
-        width: 1196px;
-    }
-
-    .span2 
-    {
-        width: 590px;
-    }
-}
-
-@media (max-width: 767px) 
-{
-    header .row, footer .row {
-        width: 100%;
-    }
+.menu > li:nth-child(1):before {
+  content: "";
+  padding: 0;
 }
